# pyfwix

./: .gitignore  CMakeLists.txt  build_python_solver.sh  build_sep_io.sh  environment.yaml  install.sh  pyproject.toml
docker/: Dockerfile  Singularity
fwix/: CudaOperator.py  CudaWEM.py  FWIXProblem.py  FWIXmodeling.py  __init__.py  sep3d.py  setup_env.py  utils.py  workers.py
fwix/src/: pyFWIX.cpp
inversion/: FWIXProblem.py  helper.py
operator/: CMakeLists.txt
operator/jupyter/: Untitled.ipynb  plot_benchmark.ipynb
operator/src/: CMakeLists.txt  CudaOperator.h  FFT.cpp  FFT.h  KernelLauncher.cu  KernelLauncher.cuh  StreamingOperator.h  complex_vector.cpp  complex_vector.cu  complex_vector.cuh  complex_vector.h  fft_callback.cu  fft_callback.cuh
operator/src/python/: CMakeLists.txt  CudaOperator.py  CudaVector.py  _CMakeLists.txt  pyCudaOperator.cpp  pyCudaVector.cpp
operator/tests/: CMakeLists.txt  complex_vector_unit_test.cpp  cufft_saturation.cpp  fft_benchmark.cpp  fft_parallel_benchmark.cpp  operator_unit_test.cpp
propagator/: CMakeLists.txt
propagator/jupyter/: test_down_up.ipynb  test_fwix_modeling.ipynb  test_injection.ipynb  test_nsps.ipynb  test_pspi.ipynb  test_pspi_nsps.ipynb
propagator/src/: CMakeLists.txt  ExtendedBorn.cpp  ExtendedBorn.h  ImagingCondition.cpp  ImagingCondition.h  Injection.cpp  Injection.h  LinReflect.cpp  LinReflect.h  NSPS.cpp  OneStep.h  OneWay.cpp  OneWay.h  PSPI.cpp  PhaseShift.cpp  PhaseShift.h  Propagator.cpp  Propagator.h  RefSampler.cpp  RefSampler.h  Reflect.cpp  Reflect.h  Scatter.cpp  Scatter.h  Scattering.cpp  Scattering.h  Selector.h  StreamingExtendedBorn.cpp  StreamingExtendedBorn.h  StreamingPropagator.cpp  StreamingPropagator.h  Taper.h  WavefieldPool.cpp  WavefieldPool.h  imaging_condition.cu  injection.cu  kmeans.cuh  kmeans.h  lin_reflect.cu  phase_shift.cu  (+7 more)
propagator/src/python/: CMakeLists.txt  CudaWEM.py  pyCudaWEM.cpp
propagator/tests/: CMakeLists.txt  born_benchmark.cpp  born_unit_test.cpp  prop_benchmark.cpp  prop_unit_test.cpp  ps_benchmark.cpp  pspi_benchmark.cpp  stream_benchmark.cpp  stream_unit_test.cpp
